--- a/products.html
+++ b/products.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Produk - Bougie De Luxe</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Produk - Candlux Studio</title>
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
 <body class="products-page">
     <nav class="navbar">
-        <div class="logo">Bougie De Luxe</div>
+        <div class="logo">Candlux Studio</div>
         <div class="nav-links">
             <a href="index.html">Beranda</a>
             <a href="products.html">Produk</a>
@@ -153,7 +153,7 @@
         <div class="product-grid">
             <div class="product-card" data-id="1" data-price="299000" data-category="relaxation" data-aroma="fresh">
                 <div class="product-image">
-                    <img src="https://images.unsplash.com/photo-1602874801007-bd458bb1b8b6?w=500&auto=format" alt="Lavender Dream">
+                    <img src="assets/images/candle1.jpg" alt="Lavender Dream">
                 </div>
                 <h3>Lavender Dream</h3>
                 <p>Aroma lavender yang menenangkan</p>
@@ -171,7 +171,7 @@
             </div>
             <div class="product-card" data-id="2" data-price="299000" data-category="energy" data-aroma="fresh">
                 <div class="product-image">
-                    <img src="https://images.unsplash.com/photo-1608181831718-c9ffd8728e34?w=500&auto=format" alt="Citrus Bliss">
+                    <img src="assets/images/candle2.jpg" alt="Citrus Bliss">
                 </div>
                 <h3>Citrus Bliss</h3>
                 <p>Perpaduan citrus yang menyegarkan</p>
@@ -189,7 +189,7 @@
             </div>
             <div class="product-card" data-id="3" data-price="299000" data-category="comfort" data-aroma="sweet">
                 <div class="product-image">
-                    <img src="https://images.unsplash.com/photo-1639501295122-28c362f2a571?w=500&auto=format" alt="Vanilla Serenity">
+                    <img src="assets/images/candle3.jpg" alt="Vanilla Serenity">
                 </div>
                 <h3>Vanilla Serenity</h3>
                 <p>Aroma vanilla yang menenangkan</p>
@@ -207,7 +207,7 @@
             </div>
             <div class="product-card" data-id="4" data-price="349000" data-category="relaxation" data-aroma="fresh">
                 <div class="product-image">
-                    <img src="https://images.unsplash.com/photo-1603006905003-be475563bc59?w=500&auto=format" alt="Ocean Breeze">
+                    <img src="assets/images/candle4.jpg" alt="Ocean Breeze">
                 </div>
                 <h3>Ocean Breeze</h3>
                 <p>Aroma laut yang menyegarkan</p>
@@ -225,7 +225,7 @@
             </div>
             <div class="product-card" data-id="5" data-price="349000" data-category="energy" data-aroma="fresh">
                 <div class="product-image">
-                    <img src="https://images.unsplash.com/photo-1636716642701-01754aef1066?w=500&auto=format" alt="Mint Fresh">
+                    <img src="assets/images/candle5.jpg" alt="Mint Fresh">
                 </div>
                 <h3>Mint Fresh</h3>
                 <p>Aroma mint yang menyegarkan</p>
@@ -243,7 +243,7 @@
             </div>
             <div class="product-card" data-id="6" data-price="349000" data-category="comfort" data-aroma="sweet">
                 <div class="product-image">
-                    <img src="https://images.unsplash.com/photo-1639501295122-28c362f2a571?w=500&auto=format" alt="Honey Delight">
+                    <img src="assets/images/candle6.jpg" alt="Honey Delight">
                 </div>
                 <h3>Honey Delight</h3>
                 <p>Aroma madu yang manis</p>
@@ -261,7 +261,7 @@
             </div>
             <div class="product-card" data-id="7" data-price="399000" data-category="relaxation" data-aroma="fresh">
                 <div class="product-image">
-                    <img src="https://images.unsplash.com/photo-1602874801007-bd458bb1b8b6?w=500&auto=format" alt="Forest Mist">
+                    <img src="assets/images/candle7.jpg" alt="Forest Mist">
                 </div>
                 <h3>Forest Mist</h3>
                 <p>Aroma hutan yang menenangkan</p>
@@ -279,7 +279,7 @@
             </div>
             <div class="product-card" data-id="8" data-price="399000" data-category="energy" data-aroma="fresh">
                 <div class="product-image">
-                    <img src="https://images.unsplash.com/photo-1608181831718-c9ffd8728e34?w=500&auto=format" alt="Lemon Zest">
+                    <img src="assets/images/candle8.jpg" alt="Lemon Zest">
                 </div>
                 <h3>Lemon Zest</h3>
                 <p>Aroma lemon yang menyegarkan</p>
@@ -297,7 +297,7 @@
             </div>
             <div class="product-card" data-id="9" data-price="399000" data-category="comfort" data-aroma="sweet">
                 <div class="product-image">
-                    <img src="https://images.unsplash.com/photo-1639501295122-28c362f2a571?w=500&auto=format" alt="Caramel Dream">
+                    <img src="assets/images/candle9.jpg" alt="Caramel Dream">
                 </div>
                 <h3>Caramel Dream</h3>
                 <p>Aroma karamel yang manis</p>
@@ -315,7 +315,7 @@
             </div>
             <div class="product-card" data-id="10" data-price="449000" data-category="relaxation" data-aroma="fresh">
                 <div class="product-image">
-                    <img src="https://images.unsplash.com/photo-1603006905003-be475563bc59?w=500&auto=format" alt="Mountain Air">
+                    <img src="assets/images/candle10.jpg" alt="Mountain Air">
                 </div>
                 <h3>Mountain Air</h3>
                 <p>Aroma pegunungan yang segar</p>
@@ -333,7 +333,7 @@
             </div>
             <div class="product-card" data-id="11" data-price="449000" data-category="energy" data-aroma="fresh">
                 <div class="product-image">
-                    <img src="https://images.unsplash.com/photo-1608181831718-c9ffd8728e34?w=500&auto=format" alt="Grapefruit Burst">
+                    <img src="assets/images/candle11.jpg" alt="Grapefruit Burst">
                 </div>
                 <h3>Grapefruit Burst</h3>
                 <p>Aroma jeruk bali yang menyegarkan</p>
@@ -351,7 +351,7 @@
             </div>
             <div class="product-card" data-id="12" data-price="449000" data-category="comfort" data-aroma="sweet">
                 <div class="product-image">
-                    <img src="https://images.unsplash.com/photo-1639501295122-28c362f2a571?w=500&auto=format" alt="Coconut Bliss">
+                    <img src="assets/images/candle12.jpg" alt="Coconut Bliss">
                 </div>
                 <h3>Coconut Bliss</h3>
                 <p>Aroma kelapa yang manis</p>
@@ -369,7 +369,7 @@
             </div>
             <div class="product-card" data-id="13" data-price="499000" data-category="relaxation" data-aroma="fresh">
                 <div class="product-image">
-                    <img src="https://images.unsplash.com/photo-1602874801007-bd458bb1b8b6?w=500&auto=format" alt="Rainforest">
+                    <img src="assets/images/candle13.jpg" alt="Rainforest">
                 </div>
                 <h3>Rainforest</h3>
                 <p>Aroma hutan hujan yang menenangkan</p>
@@ -387,7 +387,7 @@
             </div>
             <div class="product-card" data-id="14" data-price="499000" data-category="energy" data-aroma="fresh">
                 <div class="product-image">
-                    <img src="https://images.unsplash.com/photo-1608181831718-c9ffd8728e34?w=500&auto=format" alt="Orange Blossom">
+                    <img src="assets/images/candle14.jpg" alt="Orange Blossom">
                 </div>
                 <h3>Orange Blossom</h3>
                 <p>Aroma bunga jeruk yang menyegarkan</p>
@@ -405,7 +405,7 @@
             </div>
             <div class="product-card" data-id="15" data-price="499000" data-category="comfort" data-aroma="sweet">
                 <div class="product-image">
-                    <img src="https://images.unsplash.com/photo-1639501295122-28c362f2a571?w=500&auto=format" alt="Chocolate Heaven">
+                    <img src="assets/images/candle15.jpg" alt="Chocolate Heaven">
                 </div>
                 <h3>Chocolate Heaven</h3>
                 <p>Aroma cokelat yang manis</p>
@@ -423,7 +423,7 @@
             </div>
             <div class="product-card" data-id="16" data-price="549000" data-category="relaxation" data-aroma="fresh">
                 <div class="product-image">
-                    <img src="https://images.unsplash.com/photo-1602874801007-bd458bb1b8b6?w=500&auto=format" alt="Bamboo Forest">
+                    <img src="assets/images/candle16.jpg" alt="Bamboo Forest">
                 </div>
                 <h3>Bamboo Forest</h3>
                 <p>Aroma bambu yang menenangkan</p>
@@ -441,7 +441,7 @@
             </div>
             <div class="product-card" data-id="17" data-price="549000" data-category="energy" data-aroma="fresh">
                 <div class="product-image">
-                    <img src="https://images.unsplash.com/photo-1608181831718-c9ffd8728e34?w=500&auto=format" alt="Lime Splash">
+                    <img src="assets/images/candle17.jpg" alt="Lime Splash">
                 </div>
                 <h3>Lime Splash</h3>
                 <p>Aroma jeruk nipis yang menyegarkan</p>
@@ -459,7 +459,7 @@
             </div>
             <div class="product-card" data-id="18" data-price="549000" data-category="comfort" data-aroma="sweet">
                 <div class="product-image">
-                    <img src="https://images.unsplash.com/photo-1639501295122-28c362f2a571?w=500&auto=format" alt="Berry Sweet">
+                    <img src="assets/images/candle18.jpg" alt="Berry Sweet">
                 </div>
                 <h3>Berry Sweet</h3>
                 <p>Aroma beri yang manis</p>
@@ -477,7 +477,7 @@
             </div>
             <div class="product-card" data-id="19" data-price="599000" data-category="relaxation" data-aroma="fresh">
                 <div class="product-image">
-                    <img src="https://images.unsplash.com/photo-1602874801007-bd458bb1b8b6?w=500&auto=format" alt="Morning Dew">
+                    <img src="assets/images/candle19.jpg" alt="Morning Dew">
                 </div>
                 <h3>Morning Dew</h3>
                 <p>Aroma embun pagi yang menenangkan</p>
@@ -495,7 +495,7 @@
             </div>
             <div class="product-card" data-id="20" data-price="599000" data-category="comfort" data-aroma="sweet">
                 <div class="product-image">
-                    <img src="https://images.unsplash.com/photo-1639501295122-28c362f2a571?w=500&auto=format" alt="Sugar Cookie">
+                    <img src="assets/images/candle20.jpg" alt="Sugar Cookie">
                 </div>
                 <h3>Sugar Cookie</h3>
                 <p>Aroma kue yang manis</p>
@@ -521,12 +521,12 @@
                 <a href="#"><i class="fab fa-facebook"></i></a>
                 <a href="#"><i class="fab fa-pinterest"></i></a>
             </div>
-            <p>&copy; 2024 Bougie De Luxe. Hak Cipta Dilindungi.</p>
+            <p>&copy; 2024 Candlux Studio. Hak Cipta Dilindungi.</p>
         </div>
     </footer>
 
     <!-- Load scripts at the end of body -->
-    <script src="cart.js"></script>
-    <script src="script.js"></script>
+    <script src="js/cart.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html> 
