--- a/cart.html
+++ b/cart.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Keranjang - Bougie De Luxe</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Keranjang - Candlux Studio</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/cart.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
     <style>
@@ -215,7 +216,7 @@
 </head>
 <body class="products-page">
     <nav class="navbar">
-        <div class="logo">Bougie De Luxe</div>
+        <div class="logo">Candlux Studio</div>
         <div class="nav-links">
             <a href="index.html">Beranda</a>
             <a href="products.html">Produk</a>
@@ -250,10 +251,10 @@
                 <a href="#"><i class="fab fa-facebook"></i></a>
                 <a href="#"><i class="fab fa-pinterest"></i></a>
             </div>
-            <p>&copy; 2024 Bougie De Luxe. Hak Cipta Dilindungi.</p>
+            <p>&copy; 2024 Candlux Studio. Hak Cipta Dilindungi.</p>
         </div>
     </footer>
 
-    <script src="cart.js"></script>
+    <script src="js/cart.js"></script>
 </body>
 </html> 
