--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bougie De Luxe - Lilin Aromaterapi</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Candlux Studio - Lilin Aromaterapi</title>
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav class="navbar">
-        <div class="logo">Bougie De Luxe</div>
-        <div class="nav-links">
+        <div class="logo">Candlux Studio</div>
+        <button class="hamburger" id="hamburgerBtn"><i class="fas fa-bars"></i></button>
+        <div class="nav-links" id="mainNavLinks">
             <a href="index.html">Beranda</a>
             <a href="products.html">Produk</a>
             <a href="about.html">Tentang</a>
@@ -21,10 +22,16 @@
             </a>
         </div>
     </nav>
+    <div class="mobile-menu" id="mobileMenu">
+        <a href="index.html">Beranda</a>
+        <a href="products.html">Produk</a>
+        <a href="about.html">Tentang</a>
+        <a href="cart.html">Keranjang</a>
+    </div>
 
     <section class="hero">
         <div class="hero-content">
-            <h1>Bougie De Luxe</h1>
+            <h1>Candlux Studio</h1>
             <p>Discover our collection of handcrafted luxury candles</p>
             <a href="#products" class="cta-button">Shop Now</a>
         </div>
@@ -41,30 +48,39 @@
         <div class="product-grid">
             <div class="product-card" data-id="1" data-price="299000">
                 <div class="product-image">
-                    <img src="images/candle1.jpg" alt="Lavender Dream">
+                    <img src="assets/images/candle1.jpg" alt="Lavender Dream">
                 </div>
                 <h3>Lavender Dream</h3>
                 <p>Aroma lavender yang menenangkan</p>
                 <div class="product-price">Rp 299.000</div>
-                <button class="add-to-cart">Tambah ke Keranjang</button>
+                <div class="product-buttons">
+                    <button class="view-details"><i class="fas fa-eye"></i> Lihat Detail</button>
+                    <button class="add-to-cart"><i class="fas fa-shopping-cart"></i> Tambah ke Keranjang</button>
+                </div>
             </div>
             <div class="product-card" data-id="2" data-price="299000">
                 <div class="product-image">
-                    <img src="images/candle2.jpg" alt="Citrus Bliss">
+                    <img src="assets/images/candle2.jpg" alt="Citrus Bliss">
                 </div>
                 <h3>Citrus Bliss</h3>
                 <p>Perpaduan citrus yang menyegarkan</p>
                 <div class="product-price">Rp 299.000</div>
-                <button class="add-to-cart">Tambah ke Keranjang</button>
+                <div class="product-buttons">
+                    <button class="view-details"><i class="fas fa-eye"></i> Lihat Detail</button>
+                    <button class="add-to-cart"><i class="fas fa-shopping-cart"></i> Tambah ke Keranjang</button>
+                </div>
             </div>
             <div class="product-card" data-id="3" data-price="299000">
                 <div class="product-image">
-                    <img src="images/candle3.jpg" alt="Vanilla Serenity">
+                    <img src="assets/images/candle3.jpg" alt="Vanilla Serenity">
                 </div>
                 <h3>Vanilla Serenity</h3>
                 <p>Aroma vanilla yang menenangkan</p>
                 <div class="product-price">Rp 299.000</div>
-                <button class="add-to-cart">Tambah ke Keranjang</button>
+                <div class="product-buttons">
+                    <button class="view-details"><i class="fas fa-eye"></i> Lihat Detail</button>
+                    <button class="add-to-cart"><i class="fas fa-shopping-cart"></i> Tambah ke Keranjang</button>
+                </div>
             </div>
         </div>
         <div class="view-all">
@@ -72,15 +88,101 @@
         </div>
     </section>
 
+    <!-- Product Modal -->
+    <div class="product-modal">
+        <div class="modal-content">
+            <button class="close-modal">
+                <i class="fas fa-times"></i>
+            </button>
+            <div class="modal-product-details">
+                <div class="modal-product-image">
+                    <img id="modalProductImage" src="" alt="Product Image">
+                </div>
+                <div class="modal-product-info">
+                    <h2 id="modalProductName"></h2>
+                    <p id="modalProductDescription" class="modal-product-description"></p>
+                    <div class="modal-product-meta">
+                        <div>
+                            <strong>Aroma:</strong>
+                            <span id="modalProductAroma"></span>
+                        </div>
+                        <div>
+                            <strong>Kategori:</strong>
+                            <span id="modalProductCategory"></span>
+                        </div>
+                    </div>
+                    <div class="modal-product-price" id="modalProductPrice"></div>
+                    <button class="modal-add-to-cart" id="modalAddToCart">
+                        <i class="fas fa-shopping-cart"></i>
+                        Tambah ke Keranjang
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Add to Cart Options Modal -->
+    <div class="options-modal">
+        <div class="options-content">
+            <button class="close-options">
+                <i class="fas fa-times"></i>
+            </button>
+            <div class="options-product-info">
+                <img id="optionsProductImage" src="" alt="Product Image">
+                <div class="options-details">
+                    <h3 id="optionsProductName"></h3>
+                    <p id="optionsProductPrice"></p>
+                </div>
+            </div>
+            <div class="options-form">
+                <div class="option-group">
+                    <label for="product-size">Pilih Ukuran:</label>
+                    <div class="size-options">
+                        <input type="radio" id="size-small" name="size" value="small">
+                        <label for="size-small">
+                            <span class="size-volume">100ml</span>
+                            <span class="size-price">Rp 239.000</span>
+                        </label>
+                        <input type="radio" id="size-medium" name="size" value="medium" checked>
+                        <label for="size-medium">
+                            <span class="size-volume">200ml</span>
+                            <span class="size-price">Rp 299.000</span>
+                        </label>
+                        <input type="radio" id="size-large" name="size" value="large">
+                        <label for="size-large">
+                            <span class="size-volume">300ml</span>
+                            <span class="size-price">Rp 359.000</span>
+                        </label>
+                    </div>
+                </div>
+                <div class="option-group quantity-group">
+                    <label for="product-quantity">Jumlah:</label>
+                    <div class="quantity-selector">
+                        <button class="quantity-btn minus">-</button>
+                        <input type="number" id="product-quantity" value="1" min="1" max="10">
+                        <button class="quantity-btn plus">+</button>
+                    </div>
+                </div>
+                <div class="total-price">
+                    Total: <span id="optionsTotalPrice">Rp 0</span>
+                </div>
+                <button class="confirm-add-to-cart">
+                    <i class="fas fa-shopping-cart"></i>
+                    Tambahkan ke Keranjang
+                </button>
+            </div>
+        </div>
+    </div>
+
     <section class="about">
         <div class="about-content">
             <div class="about-text">
                 <h2>Our Story</h2>
-                <p>Bougie De Luxe was born from a passion for creating moments of luxury and relaxation in everyday life. Our journey began in 2020, when our founder discovered the transformative power of carefully crafted candles.</p>
+                <p>Candlux Studio was born from a passion for creating moments of luxury and relaxation in everyday life. Our journey began in 2020, when our founder discovered the transformative power of carefully crafted candles.</p>
                 <p>Each of our candles is hand-poured with love and attention to detail, using only the finest ingredients. We believe that luxury should be accessible and sustainable, which is why we use eco-friendly materials and ethical sourcing practices.</p>
             </div>
             <div class="about-image">
-                <img src="images/about-image.jpg" alt="About Bougie De Luxe">
+                <img src="images/about-image.jpg" alt="About Candlux Studio">
             </div>
             <div class="about-stats">
                 <div class="stat-item">
@@ -128,7 +230,7 @@
 
             <div class="values-details">
                 <h3>Komitmen Kami</h3>
-                <p>Di Bougie De Luxe, kami percaya bahwa setiap detail memiliki arti. Dari pemilihan bahan baku hingga proses pembuatan, kami selalu mengutamakan kualitas dan keberlanjutan. Kami berkomitmen untuk memberikan pengalaman terbaik bagi pelanggan kami, tidak hanya melalui produk berkualitas tinggi, tetapi juga melalui layanan yang personal dan perhatian terhadap detail.</p>
+                <p>Di Candlux Studio, kami percaya bahwa setiap detail memiliki arti. Dari pemilihan bahan baku hingga proses pembuatan, kami selalu mengutamakan kualitas dan keberlanjutan. Kami berkomitmen untuk memberikan pengalaman terbaik bagi pelanggan kami, tidak hanya melalui produk berkualitas tinggi, tetapi juga melalui layanan yang personal dan perhatian terhadap detail.</p>
                 
                 <div class="values-list">
                     <div class="value-point">
@@ -225,11 +327,11 @@
                 <a href="#"><i class="fab fa-facebook"></i></a>
                 <a href="#"><i class="fab fa-pinterest"></i></a>
             </div>
-            <p>&copy; 2024 Bougie De Luxe. Hak Cipta Dilindungi.</p>
+            <p>&copy; 2024 Candlux Studio. Hak Cipta Dilindungi.</p>
         </div>
     </footer>
 
-    <script src="cart.js"></script>
-    <script src="script.js"></script>
+    <script src="js/cart.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html> 
